--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,24 @@
 {
-    "manifest_version": 3,
-    "name": "Font Changer for Dyslexia",
-    "version": "1.0",
-    "description": "Change font on webpages for readibility. Includes OpenDyslexic font.",
-    "permissions": ["scripting", "activeTab"],
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "web_accessible_resources": [
-      {
-        "resources": ["fonts/OpenDyslexic-Regular.otf"],
-        "matches": ["<all_urls>"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "Font Changer for Dyslexia",
+  "version": "1.0",
+  "description": "Change font on webpages for readibility. Includes OpenDyslexic font.",
+  "permissions": ["scripting", "activeTab", "storage"],
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["fonts/OpenDyslexic-Regular.otf"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
   
